--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <hr>
 
   <h2>আমার ছবি</h2>
-  <img src="Rashed.png" width="200">
+  <img src="<a href="https://imgbb.com/"><img src="https://i.ibb.co/GQ2JCYtk/Rashed.jpg" alt="Rashed" border="10";></a>
 
   <h2>আমি যে বিষয়গুলো পড়াই:</h2>
   <ol>
@@ -34,6 +34,7 @@
   <p><a href="https://colab.research.google.com/" target="_blank">Python শেখার জন্য Google Colab</a></p>
   <p><a href="https://www.youtube.com" target="_blank">ভিডিও টিউটোরিয়ালের জন্য YouTube</a></p>
 
+  
 </body>
 </html>
 
