--- a/favicon.html
+++ b/favicon.html
@@ -3,6 +3,8 @@
 <head>
   <title>My Page Title</title>
   <link rel="icon" type="image/x-icon" href="/images/image.png">
+  <link rel="icon" type="image/png" href="image/favicon.png?v=1">
+
 </head>
 <body>
 
