--- a/Flex-box/flexbox_gallary.html
+++ b/Flex-box/flexbox_gallary.html
@@ -81,6 +81,33 @@
 </a>
     <div class="desc">Logo</div>
   </div>
+   <div class="gallery">
+    <a target="_blank" href="image/Rashed.png">
+  <img src="image/Rashed.png" alt="Rashed Image" width="300" height="300">
+</a>
+  <div class="desc">Md. Rasheduzzaman<br>Assistant Teacher<br>Goyhatta GPS</div>
+  </div>
+
+  <div class="gallery">
+    <a target="_blank" href="image/image.png">
+      <img src="image/image.png" alt="Lotus" width="300" height="300">
+    </a>
+    <div class="desc">Lotus</div>
+  </div>
+
+  <div class="gallery">
+    <a target="_blank" href="image/large-image.jpg">
+  <img src="image/large-image.jpg" alt="Rashed Image" width="300" height="300">
+</a>
+    <div class="desc">City</div>
+  </div>
+
+  <div class="gallery">
+    <a target="_blank" href="image/image1.png">
+  <img src="image/image1.png" alt="Rashed Image" width="300" height="300">
+</a>
+    <div class="desc">Logo</div>
+  </div>
 </div>
 
 </body>
